Sound Input Blueprint

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,3 +100,5 @@ bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
+[Audio]
+AudioDeviceModuleName=AudioMixerXAudio2
