Camera Setup, Player Blueprint

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1C15F292466E66E7D1D481815F4BB7A4
+ProjectVersion=0.0.1.0
+CompanyName=JammedGame
+CompanyDistinguishedName=Jammed Game
+Homepage=jammedgame.itch.io
+
